docs(configuration): document Wake-on-LAN BIOS settings for hosts
Adds documentation for the BIOS settings required to enable Wake-on-LAN
on kilimanjaro and tarangire hosts. This preserves the configuration
knowledge alongside the literate configuration approach, explaining
the specific BIOS menu paths needed for each system.

--- a/configuration.org
+++ b/configuration.org
@@ -782,6 +782,9 @@ work = {
 
 Main desktop (Intel Core i5-12400F).
 
+Wake-on-LAN (WoL) is enabled via the following BIOS setting:
+=Advanced > APM Configuration > Power On By PCI-E > Enabled=
+
 #+NAME: host-kilimanjaro
 #+begin_src nix
 kilimanjaro = {
@@ -829,6 +832,9 @@ serengeti = {
 **** tarangire
 
 Build server (Ryzen 9 9950X).
+
+Wake-on-LAN (WoL) is enabled via the following BIOS setting:
+=Advanced > APM Configuration > Power On By PCI-E > Enabled=
 
 #+NAME: host-tarangire
 #+begin_src nix
