docs: fix translate

--- a/README.org
+++ b/README.org
@@ -65,6 +65,7 @@ even if the translation is incomplete
 [type: org] configuration.org $lang:configuration.$lang.org opt:"-k 0"
 [type: org] applications/emacs/init.org $lang:applications/emacs/init.$lang.org opt:"-k 0"
 [type: org] applications/emacs/early-init.org $lang:applications/emacs/early-init.$lang.org opt:"-k 0"
+[type: org] modules/configuration.org $lang:modules/configuration.$lang.org opt:"-k 0"
 #+end_src
 
 For detailed information about =po4a.cfg= configuration, see =man po4a=.
