fix: add missing settings to org

--- a/configuration.org
+++ b/configuration.org
@@ -997,6 +997,7 @@ outputs =
               typos = {
                 enable = true;
                 excludes = [
+                  ".sops.yaml"
                   "homes/shared/gpg/keys.txt"
                   "secrets.yaml"
                   "secrets/default.yaml"
@@ -1068,6 +1069,7 @@ outputs =
         devShells = {
           default = pkgs.mkShell {
             packages = with pkgs; [
+              aws-vault
               gettext
               nix-fast-build
               self'.packages.po4a_0_74
