feat(emacs): add pdf-tools for improved PDF viewing
Emacs's built-in DocView renders PDFs as rasterized images with poor
text quality and limited interactivity. pdf-tools provides sharp
rendering via poppler, text selection, incremental search, and
annotation support for better PDF workflow integration.

Uses pdf-loader-install to defer initialization until a PDF is opened,
avoiding unnecessary startup overhead when Nix provides pre-built epdfinfo.

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -389,6 +389,31 @@ Used when converting Org files to HTML with syntax highlighting for code blocks.
   :ensure t)
 #+end_src
 
+* document
+
+** pdf-tools
+
+Emacs's built-in DocView mode renders PDFs as rasterized images page-by-page,
+resulting in blurry text at most zoom levels
+and lacking interactive features like text selection, incremental search, and annotation.
+
+[[https://github.com/vedang/pdf-tools][pdf-tools]] replaces DocView with a viewer powered by =poppler=,
+providing sharp rendering, isearch integration, annotation support,
+and SyncTeX for LaTeX workflows.
+
+Using =pdf-loader-install= instead of =pdf-tools-install=
+to defer initialization until a PDF is actually opened.
+With Nix's pre-built =epdfinfo= binary, both functions behave identically,
+but the loader variant avoids unnecessary work at startup.
+
+#+begin_src emacs-lisp
+(use-package pdf-tools
+  :ensure t
+  :mode ("\\.pdf\\'" . pdf-view-mode)
+  :config
+  (pdf-loader-install))
+#+end_src
+
 * terminal
 ** vterm
 
