feat(emacs): add protobuf-ts-mode for Protocol Buffer editing
Use tree-sitter-based mode for improved syntax support and editing experience
when working with proto3 files.

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -301,6 +301,17 @@ which allows Emacs to display international characters correctly.
 (autoload 'po-find-file-coding-system "po-mode")
 #+end_src
 
+** Protocol Buffers
+
+[[https://github.com/emacsattic/protobuf-ts-mode][protobuf-ts-mode]] is a tree-sitter-based major mode for editing proto3 files.
+
+The mode auto-registers =.proto= files when the =proto= grammar is available.
+
+#+begin_src emacs-lisp
+(use-package protobuf-ts-mode
+  :ensure t)
+#+end_src
+
 * org
 
 ** Semantic Line Breaks
