feat(emacs): add just-ts-mode for justfile editing
Adds just-ts-mode, a tree-sitter-based major mode for the just command
runner. This extends Emacs editing support to justfiles with syntax
highlighting and the C-c ' feature for dedicated recipe editing buffers.

--- a/applications/emacs/init.org
+++ b/applications/emacs/init.org
@@ -312,6 +312,17 @@ The mode auto-registers =.proto= files when the =proto= grammar is available.
   :ensure t)
 #+end_src
 
+** Justfile
+
+[[https://github.com/leon-barrett/just-ts-mode.el][just-ts-mode]] is a tree-sitter-based major mode for editing [[https://github.com/casey/just][just]] command runner files.
+=C-c '= opens a dedicated editing buffer for the recipe body at point,
+with automatic shebang-based language detection.
+
+#+begin_src emacs-lisp
+(use-package just-ts-mode
+  :ensure t)
+#+end_src
+
 * org
 
 ** Semantic Line Breaks
